src/index.scss
html {
	overflow-x: hidden;
}
body {
	padding-right: 0px !important; // can't quite figure out why MUI likes to change the padding when opening a menu or dialog
}

:root {
	// Main color palette
	--greenPrimary: #0c6;
	--greenSecondary: #095;
	--redPrimary: #f34;
	--redSecondary: #b23;
	--bluePrimary: #19f;
	--blueSecondary: #17c;
	--yellowPrimary: #fb2;
	--yellowSecondary: #d92;
	--textPrimary: #bbb;
	--textSecondary: #eee;
	--textTertiary: #fff;
	--backgroundPrimary: #111;
	--backgroundSecondary: #222;
	--backgroundTertiary: #333;
	// Desktop nav
	--backgroundNavButton: #ffffff12;
	// Easing
	--easeOut: cubic-bezier(0, 0, 0.2, 1);
	--easeInOut: cubic-bezier(0.6, 0, 0.1, 1);
	// Inset box shadow offsets for text links
	--boxInsetBody: -1.3rem;
	--boxInsetH2: -2.75rem;
	--boxInsetH3: -2rem;
	// Fonts
	--fontPrimary: Silka, Metropolis, "Clarity City", Monserrat, Roboto,
		"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica,
		Arial, Arial, sans-serif;
	--fontSecondary: "Basier Square", Roboto, "HelveticaNeue-Light",
		"Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, Arial,
		sans-serif;
	--fontTertiary: "CHANEY Extended", Metropolis, "Clarity City", Monserrat,
		Roboto, "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
		Helvetica, Arial, Arial, sans-serif;
	--fontMonospace: "Basier Square Mono", Roboto Mono, monospace;
	// Top margin
	--marginTop: 145px;
	@media only screen and (max-width: 1199px) {
		--marginTop: 100px;
	}
}

// Scrollbars
::-webkit-scrollbar {
	width: 16px;
}
::-webkit-scrollbar-track {
	background: var(--backgroundPrimary);
	border-radius: 8px;
	border: 4px solid var(--backgroundPrimary);
}
::-webkit-scrollbar-thumb {
	background: #202020;
	border-radius: 8px;
	border: 4px solid var(--backgroundPrimary);
}
::-webkit-scrollbar-thumb:hover {
	background: var(--backgroundTertiary);
}

// Text selection
::selection {
	color: var(--backgroundPrimary);
	background: var(--greenPrimary);
}

@keyframes fadeBottom {
	0% {
		opacity: 0;
		transform: translateY(30px);
	}
	75% {
		opacity: 1;
	}
	100% {
		opacity: 1;
		transform: translateY(0px);
	}
}
@keyframes fadeTop {
	0% {
		opacity: 0;
		transform: translateY(-30px);
	}
	75% {
		opacity: 1;
	}
	100% {
		opacity: 1;
		transform: translateY(0px);
	}
}
@keyframes fadeLeft {
	0% {
		opacity: 0;
		transform: translateX(-30px);
	}
	75% {
		opacity: 1;
	}
	100% {
		opacity: 1;
		transform: translateX(0px);
	}
}
@keyframes fadeRight {
	0% {
		opacity: 0;
		transform: translateX(30px);
	}
	75% {
		opacity: 1;
	}
	100% {
		opacity: 1;
		transform: translateX(0px);
	}
}
@keyframes fadeTopLoop {
	0% {
		opacity: 0;
		transform: translateY(-10px);
	}
	50% {
		opacity: 1;
	}
	100% {
		opacity: 0;
		transform: translateY(10px);
	}
}
@keyframes splash {
	0% {
		transform: scale(1) rotate(-10deg);
	}
	100% {
		transform: scale(1.05) rotate(-10deg);
	}
}

.fadeBottom {
	opacity: 0;
	animation: fadeBottom var(--easeOut) forwards;
	animation-duration: 0.5s !important;
	animation-delay: 0.05s !important;
}
.fadeLeft {
	opacity: 0;
	animation: fadeLeft var(--easeOut) forwards;
	animation-duration: 0.5s !important;
	animation-delay: 0.05s !important;
}
.fadeRight {
	opacity: 0;
	animation: fadeRight var(--easeOut) forwards;
	animation-duration: 0.5s !important;
	animation-delay: 0.05s !important;
}

// Optimized text sizes on mobile
@media only screen and (max-width: 1199px) {
	h1 {
		font-size: 3rem !important;
	}
	h2 {
		font-size: 1.5rem !important;
	}
}

// Change color of navigation links in desktop app bar
.desktopNav {
	a {
		display: inline-block;
		text-align: right;
		margin-left: 15px;
		.MuiButtonBase-root,
		.MuiListItemIcon-root {
			color: var(--textPrimary);
			transition: all 0.375s var(--easeOut);
		}
		&.active {
			.MuiButtonBase-root {
				color: var(--textSecondary) !important;
				background-color: var(--backgroundNavButton);
				backdrop-filter: blur(5px);
			}
			.MuiButton-startIcon {
				color: var(--greenPrimary);
			}
		}
		&:first-of-type {
			margin-left: 0;
		}
	}
}

.mobileNav {
	.MuiButtonBase-root,
	.MuiListItemIcon-root {
		color: var(--textPrimary);
		transition: all 0.375s var(--easeOut);
	}
	.active {
		.MuiButtonBase-root {
			color: var(--textSecondary);
			background-color: var(--backgroundTertiary);
		}
		.MuiListItemIcon-root {
			color: var(--greenPrimary);
		}
	}
}

.MuiAppBar-root {
	opacity: 0;
	animation: fadeTop 0.375s var(--easeOut) forwards;
	transition: 0.375s;
}
.MuiDialog-paper {
	opacity: 0;
	animation: fadeBottom 0.375s var(--easeOut) 0.14s forwards;
	transition: 0.375s;
}

.section {
	padding-top: 12vh;
	h1 {
		animation: fadeBottom 0.5s var(--easeOut) 0.08s forwards;
		opacity: 0;
		&.prominent {
			animation: fadeRight 0.5s var(--easeOut) 0.08s forwards;
			opacity: 0;
			text-anchor: end;
			line-height: 0.5;
			color: transparent;
			text-align: right;
			font-size: 12rem;
			font-family: var(--fontTertiary);
			font-weight: 400;
			-webkit-text-stroke: 2px var(--backgroundTertiary);
		}
	}
	@media only screen and (max-width: 1199px) {
		h1.prominent {
			font-size: 6rem !important;
			line-height: 0.33;
		}
	}
}

.galleryContainer {
	opacity: 0;
	animation: fadeBottom 0.5s var(--easeOut) 0.24s forwards;
    background-color: var(--backgroundPrimary);
	.galleryItem {
		transition: all 0.375s var(--easeOut);
        z-index: 0;
		&:hover {
			filter: none !important;
			transform: scale(1.02);
			box-shadow: 0 0 30px var(--backgroundPrimary);
		}
		img {
			transition: border-radius 0.375s var(--easeOut) !important;
			border-radius: 0px !important;
		}
	}
	&:hover {
		.galleryItem {
			transition: all 0.375s var(--easeOut);
			filter: opacity(0.5) blur(2px);
			&:hover {
				z-index: 1;
				filter: none !important;
				transform: scale(1.02);
				box-shadow: 0 0 30px var(--backgroundPrimary);
				img {
					border-radius: 5px !important;
				}
			}
		}
	}
}

footer {
	padding-top: 10vh;
	text-align: center;
	hr {
		opacity: 0;
		animation: fadeBottom 0.375s var(--easeOut) 0.16s forwards;
	}
	.copyright {
		opacity: 0;
		padding-top: 40px;
		animation: fadeBottom 0.375s var(--easeOut) 0.2s forwards;
	}
	#footerButtons {
		padding-bottom: 40px;
		.MuiIconButton-sizeLarge,
		.MuiButton-root,
		.MuiDivider-root {
			opacity: 0;
			animation: fadeBottom 0.375s var(--easeOut) 0.24s forwards;
			margin: 5px;
		}
	}
}

// Page headers

// Background image
img {
	&.hero {
		position: absolute;
		z-index: 0;
		animation: fadeTop 1.2s var(--easeOut) 0.2s forwards;
		opacity: 0;
		width: 100%;
		height: auto;
		margin-top: calc(-1 * var(--marginTop));
		&.fullscreen {
			margin-top: 0;
		}
	}
}

// Regular title
.title {
	margin-top: var(--marginTop);
	margin-bottom: 25px;
	h1 {
		animation: fadeBottom 0.375s var(--easeOut) forwards;
		opacity: 0;
		font-size: 6rem;
	}
	h2 {
		animation: fadeBottom 0.375s var(--easeOut) 0.04s forwards;
		opacity: 0;
		font-size: 2.25rem;
	}
	@media only screen and (max-width: 1199px) {
		h1 {
			font-size: 3.5rem !important;
		}
		h2 {
			font-size: 1.5rem !important;
		}
	}
}
// Vertically centered title texts for pages I think are worthy of one
.fullscreen {
	height: 100vh;
	position: relative;
	.title {
		position: absolute;
		top: 40vh;
		left: 50%;
		transform: translate(-50%, -50%);
		h1,
		img {
			animation: fadeBottom 1.2s var(--easeOut) 0.2s forwards;
			opacity: 0;
			max-width: 100%;
		}
		img {
			height: 6rem;
			padding-bottom: 16px;
			@media only screen and (max-width: 1199px) {
				height: 4rem;
			}
		}
		h2 {
			animation: fadeBottom 1s var(--easeOut) 0.3s forwards;
			opacity: 0;
		}
		button {
			animation: fadeBottom 1s var(--easeOut) 0.4s forwards;
			opacity: 0;
		}
		svg {
			opacity: 0;
			animation: fadeTopLoop 1s var(--easeOut) 1.5s infinite;
		}
	}
}

// General styles for links
a {
	text-decoration: none !important;
	outline: none;
	color: var(--textSecondary);
	transition: background-color 0.15s;
}
// General styles for links when tabbing through them
p a:focus-visible,
h2 a:focus-visible,
h3 a:focus-visible {
	background-color: rgba(255, 255, 255, 0.12);
}

// Underline for text links
p a,
h2 a,
h3 a {
	transition: all 0.2s var(--easeOut);
	box-shadow: inset 0 -1px 0 #ffffff55;
	margin: 0 0.4rem;
	padding: 0;
	&:hover {
		color: var(--backgroundPrimary);
		border-radius: 4px;
		margin: 0;
		padding: 0 0.4rem;
	}
}
// Specific inset positions for each text size needed
p a:hover {
	box-shadow: inset 0 var(--boxInsetBody) 0 var(--greenPrimary);
}
h2 a:hover {
	box-shadow: inset 0 var(--boxInsetH2) 0 var(--greenPrimary);
}
h3 a:hover {
	box-shadow: inset 0 var(--boxInsetH3) 0 var(--greenPrimary);
}
// Special underline for external links
p a.external {
	position: relative;
	margin: 0 0.4rem 0 0.4rem;
	padding: 0;
	&:hover {
		margin: 0;
		padding: 0 0.4rem 0 0.4rem;
	}
}
// That arrow
a.external::after {
	content: "↗";
	font-family: var(--fontPrimary);
	color: var(--bluePrimary);
	transition: all 0.15s;
	position: relative;
	top: 0.2rem;
	left: 0.2rem;
	margin-right: 0.3rem;
}
a.external:hover::after {
	color: var(--backgroundPrimary);
	top: 0rem;
	left: 0.45rem;
}
// Specific inset positions for each text size needed
p a.external:hover {
	box-shadow: inset 0 var(--boxInsetBody) 0 var(--bluePrimary);
}
h2 a.external:hover {
	box-shadow: inset 0 var(--boxInsetH2) 0 var(--bluePrimary);
}
h3 a.external:hover {
	box-shadow: inset 0 var(--boxInsetH3) 0 var(--bluePrimary);
}

code {
	font-family: var(--fontMonospace);
	color: var(--greenPrimary);
	font-size: 0.9rem;
	background-color: var(--backgroundSecondary);
	border-radius: 4px;
	padding: 3px 5px;
}

img {
	// Avoid annoyances with images in React Swipeable Views
	-webkit-user-drag: none;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
}

video {
	// I have yet to find out why text line-height is applied to videos (and images)...
	margin-bottom: -0.41rem;
}

.MuiListItemIcon-root {
	font-size: 20px;
}
.MuiListItemText-root {
	color: var(--textPrimary);
}

// Standard paddings on cards suck.
.MuiCardContent-root {
	padding: 16px 24px 16px 24px;
}
.MuiCardActions-root {
	padding: 0 9px 16px 9px;
}
.MuiAccordion-root:first-of-type {
	border-radius: 8px 8px 0 0;
}
.MuiAccordion-root:last-of-type {
	border-radius: 0 0 8px 8px;
}
.MuiAccordionSummary-root {
	padding: 4px 24px;
	h3 {
		padding: 0 !important;
	}
}
.MuiAccordionDetails-root {
	padding: 8px 24px 24px;
}

.MuiCard-root {
	.cardHeader {
		position: relative;
		cursor: pointer;
		.splash {
			z-index: 3;
			animation: splash 0.25s ease-out alternate infinite;
			font-family: "MintBit", monospace;
			font-size: 1.5rem;
			text-align: center;
			line-height: 1;
			position: absolute;
			color: var(--yellowPrimary);
			top: 60%;
			left: 65%;
			text-shadow: 2.4px 2.4px var(--backgroundSecondary);
		}
		img {
			transition: all 0.375s var(--easeOut);
			&.bg {
				z-index: 1;
				transform-origin: top;
			}
			&.logo {
				z-index: 2;
				position: absolute;
			}
		}
		&:hover {
			img {
				&.bg {
					transform: scale(1.04);
				}
				&.logo {
					transform: scale(1.04);
				}
			}
		}
		&:active {
			img {
				transition-duration: 0.15s;
				&.bg {
					transform: scale(1.02);
				}
				&.logo {
					filter: brightness(0.8);
					transform: scale(1.02);
				}
			}
		}
	}
}

